<resources>
    <string name="app_name">Campus Crush</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dating">Dating</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>


    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="developer">Developer</string>
    <string name="tAndC">Terms and Condition</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="rating">Rate Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


</resources>